--- a/Source Code/KTXSV/Content/btn1.css
+++ b/Source Code/KTXSV/Content/btn1.css
@@ -21,6 +21,30 @@
         color: white !important;
         border: 0;
     }
+.btn1-secondary {
+    border-radius: 16px;
+    background-color: #6c757d; /* màu xám trung tính */
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3);
+    color: white;
+    transition: all 0.15s ease-in-out;
+    border: 0 !important;
+}
+
+    .btn1-secondary:hover {
+        background-color: #5a6268; /* xám đậm hơn khi hover */
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.4);
+        color: white;
+        transform: scale(1.02);
+    }
+
+    .btn1-secondary:active {
+        background-color: #545b62 !important;
+        transform: scale(0.95);
+        box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+        color: white !important;
+        border: 0;
+    }
+
 /*
    .btn1-success {
     background-color: #198754;
