--- a/Source Code/KTXSV/Views/Account/Register.cshtml
+++ b/Source Code/KTXSV/Views/Account/Register.cshtml
@@ -1,7 +1,8 @@
-﻿@{
+﻿@model KTXSV.Models.RegisterViewModel
+
+@{
     Layout = null;
     ViewBag.Title = "Đăng Ký Tài Khoản Cho Sinh Viên";
-    @model KTXSV.Models.User
 }
 
 <!DOCTYPE html>
