--- a/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
@@ -5,7 +5,7 @@
 <html lang="vi">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0 />
     <title>Quản lý Ký túc xá @ViewBag.Title</title>
     <link rel="icon" type="image/png" href="https://sta.huflit.edu.vn/assets/web/images/huflit-logo.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -21,7 +21,7 @@
             width: 220px;
             background-color: #fff;
             border-right: 2px solid #f1f1f1;
-            font-weight:500;
+            font-weight: 500;
         }
 
             .sidebar .nav-link {
@@ -33,9 +33,10 @@
                 margin: 4px 0;
                 transition: all 0.2s ease-in-out;
             }
+
                 .sidebar .nav-link:hover {
                     background-color: #FFF5EE;
-                    font-weight:bold;
+                    font-weight: bold;
                     border-left: 4px solid #EE6823;
                     transform: translateX(2px);
                     color: #ee6823 !important;
@@ -47,26 +48,27 @@
                     border-left: 4px solid #EE6823;
                     font-weight: 600;
                 }
+
         .content-area {
             flex-grow: 1;
             padding: 20px;
         }
-      
+
         .btn11 {
             background-color: white !important;
             border: 1px solid #EE6823 !important;
             color: #EE6823;
         }
+
             .btn11:hover {
                 color: #EE6823;
             }
+
             .btn11:active {
-                background-color: white!important;
-                color: red!important;
+                background-color: white !important;
+                color: red !important;
                 border: 1px solid red !important;
             }
-        
-
     </style>
 </head>
 
@@ -98,10 +100,10 @@
                     <a class="nav-link" href="/Admin/PendingRegistrations">Phê duyệt đăng ký</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/ManageStudents/Index">Quản lý sinh viên</a>
+                    <a class="nav-link" href="/ManageStudents/Active">Quản lý sinh viên</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Admin/Rooms">Quản lý phòng</a>
+                    <a class="nav-link" href="/AdminRooms/Index">Quản lý phòng</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Admin/Payments">Quản lý thanh toán</a>
@@ -134,5 +136,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-confirm/3.3.4/jquery-confirm.min.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
