--- a/Source Code/KTXSV/Views/Shared/_Layout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_Layout.cshtml
@@ -16,7 +16,10 @@
         <div class="container-fluid d-flex align-items-center ms-0">
             <a class="navbar-brand d-flex align-items-center" href="/">
                 <img width="150" src="https://huflit.edu.vn/wp-content/uploads/2023/04/LOGO-HUFLIT-OFFICIAL.png" />
+
             </a>
+            <span class="me-3 text-secondary">Xin chào, @ViewBag.FullName</span>
+
             <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
