--- a/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
@@ -106,7 +106,7 @@
                     <a class="nav-link" href="/AdminRooms/Index">Quản lý phòng</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/Admin/Payments">Quản lý thanh toán</a>
+                    <a class="nav-link" href="@Url.Action("Index", "PaymentAdmin")">Quản lý thanh toán</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Admin/Notifications">Thông báo</a>
@@ -128,6 +128,7 @@
         <hr />
         <p>&copy; @DateTime.Now.Year - HUFLIT Dormitory Management System</p>
     </footer>
+
     <!-- jQuery -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
