tạo thanh toán mới khi thêm đăng ký phòng

--- a/Source Code/KTXSV/Views/PaymentAdmin/Index.cshtml
+++ b/Source Code/KTXSV/Views/PaymentAdmin/Index.cshtml
@@ -9,8 +9,8 @@
     <div class="d-flex justify-content-between align-items-center mb-3">
         <h2>Quản lý thanh toán ký túc xá</h2>
         <div>
-            @Html.ActionLink("➕ Thêm mới", "Create", null, new { @class = "btn btn-success me-2" })
-            <a href="@Url.Action("Index", "PaymentAdmin")" class="btn btn-secondary">🔁 Làm mới</a>
+            @Html.ActionLink(" Thêm mới", "Create", null, new { @class = "btn btn-success me-2" })
+            <a href="@Url.Action("Index", "PaymentAdmin")" class="btn btn-secondary"> Làm mới</a>
         </div>
     </div>
 
