--- a/Source Code/KTXSV/Views/Phong/DangKyPhong.cshtml
+++ b/Source Code/KTXSV/Views/Phong/DangKyPhong.cshtml
@@ -65,7 +65,7 @@
                 <div class="col-md-5">
                     <label class="form-label"><strong>Giới tính</strong></label>
                     <select name="gender" class="form-select">
-                        <option value="">--Tất cả--</option>
+                        <option value="">Tất cả</option>
                         <option value="Male">Nam</option>
                         <option value="Female">Nữ</option>
                     </select>
@@ -81,7 +81,7 @@
                 <div class="col-md-5">
                     <label class="form-label"><strong>Loại phòng</strong></label>
                     <select class="form-select" name="capacity">
-                        <option value="">--Tất cả--</option>
+                        <option value="">Tất cả</option>
                         <option value="4">Phòng 4 người</option>
                         <option value="6">Phòng 6 người</option>
                         <option value="8">Phòng 8 người</option>
