--- a/Source Code/KTXSV/Views/ThanhToan/HoaDon.cshtml
+++ b/Source Code/KTXSV/Views/ThanhToan/HoaDon.cshtml
@@ -43,7 +43,7 @@
                     <td>@p.PaymentID</td>
                     <td>@p.Type</td>
                     <td>@p.Amount.ToString("N0") VNĐ</td>
-                    <td>@p.PaymentDate?.ToShortDateString()</td>
+                    <td>@p.PaymentDate.ToString()</td>
                     <td>@p.Status</td>
                     <td>
                         @if (p.Status == "Unpaid")
