--- a/Source Code/KTXSV/Views/Account/Index.cshtml
+++ b/Source Code/KTXSV/Views/Account/Index.cshtml
@@ -69,15 +69,15 @@
         <h2>HỆ THỐNG ĐĂNG NHẬP</h2>
 
         <form action="@Url.Action("LoginStudent", "Account")" method="get" style="margin-bottom: 20px;">
-            <button type="submit" class="btn btn-warning btn-custom">🎓 Đăng nhập Sinh viên</button>
+            <button type="submit" class="btn btn-warning btn-custom"> Đăng nhập Sinh viên</button>
         </form>
 
         <form action="@Url.Action("LoginAdmin", "Account")" method="get">
-            <button type="submit" class="btn btn-danger btn-custom">🛡️ Đăng nhập Admin</button>
+            <button type="submit" class="btn btn-danger btn-custom"> Đăng nhập Admin</button>
         </form>
 
         <div class="footer-text">
-            <p>© 2025 Huflit Dormitory | Thiết kế bởi <b>Puskien & KEANPHAM</b></p>
+            <p>© 2025 Huflit Dormitory </p>
         </div>
     </div>
 </div>
