--- a/Source Code/KTXSV/Views/ManageStudents/Index.cshtml
+++ b/Source Code/KTXSV/Views/ManageStudents/Index.cshtml
@@ -123,8 +123,8 @@
     </div>
 }
 
-<table class="table table-bordered table-striped">
-    <thead>
+<table class="table table-bordered ">
+    <thead class="bg-light">
         <tr>
             <th>STT</th>
             <th>Username</th>
