--- a/Source Code/KTXSV/Views/ManageStudents/Edit.cshtml
+++ b/Source Code/KTXSV/Views/ManageStudents/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="container mt-4">
-    <h2 class="text-center mb-4">📝 Chỉnh sửa thông tin sinh viên</h2>
+    <h2 class="text-center fw-bold mb-4" style="color: #EE6823">Chỉnh sửa thông tin sinh viên</h2>
 
     @using (Html.BeginForm())
     {
