--- a/Source Code/KTXSV/Views/Phong/DangKyPhong.cshtml
+++ b/Source Code/KTXSV/Views/Phong/DangKyPhong.cshtml
@@ -218,7 +218,7 @@
                                                         data-building="@phong.Building"
                                                         data-capacity="@phong.Capacity"
                                                         data-available="@slotsAvailable">
-                                                    <i class="bi bi-check-circle"></i> Đăng ký
+                                                     Đăng ký
                                                 </button>
                                             </form>
 
