--- a/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
@@ -77,7 +77,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg bg-white shadow-sm p-3">
         <div class="container-fluid">
-            <a class="navbar-brand d-flex align-items-center" href="/Admin/Dashboard">
+            <a class="navbar-brand d-flex align-items-center" href="#">
                 <img src="https://huflit.edu.vn/wp-content/uploads/2023/04/LOGO-HUFLIT-OFFICIAL.png" width="140" />
                 <span class="ms-2 fw-bold text-dark">Trang quản trị KTX</span>
             </a>
