--- a/Source Code/KTXSV/Views/SupportRequests/Index.cshtml
+++ b/Source Code/KTXSV/Views/SupportRequests/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container py-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 style="color:#EE6328 !important" class=" fw-bold mb-0">
-            <i class="bi bi-life-preserver me-2"></i>@ViewBag.Title
+            <i class=" me-2"></i>@ViewBag.Title
         </h2>
         @Html.ActionLink("Tạo yêu cầu mới", "Create", null, new { @class = "btn btn-ee px-4 shadow-sm" })
     </div>
