--- a/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
+++ b/Source Code/KTXSV/Views/Shared/_AdminLayout.cshtml
@@ -100,13 +100,13 @@
                     <a class="nav-link" href="/Admin/PendingRegistrations">Phê duyệt đăng ký</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/ManageStudents/Active">Quản lý sinh viên</a>
+                    <a class="nav-link" href="/ManageStudents/Index">Sinh viên</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/AdminRooms/Index">Quản lý phòng</a>
+                    <a class="nav-link" href="/AdminRooms/Index">Phòng</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="@Url.Action("Index", "PaymentAdmin")">Quản lý thanh toán</a>
+                    <a class="nav-link" href="@Url.Action("Index", "PaymentAdmin")">Thanh toán</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/Admin/Notifications">Thông báo</a>
