--- a/Source Code/KTXSV/Views/ManageStudents/Create.cshtml
+++ b/Source Code/KTXSV/Views/ManageStudents/Create.cshtml
@@ -22,7 +22,7 @@
                     <!-- Cột bên trái -->
                     <div class="col-md-6">
                         <div class="form-group mb-3">
-                            @Html.LabelFor(m => m.Username, "Tên đăng nhập", new { @class = "form-label fw-semibold" })
+                            @Html.LabelFor(m => m.Username, "MSSV", new { @class = "form-label fw-semibold" })
                             @Html.TextBoxFor(m => m.Username, new { @class = "form-control", placeholder = "Nhập tên đăng nhập" })
                             @Html.ValidationMessageFor(m => m.Username, "", new { @class = "text-danger small" })
                         </div>
